feat(): add usecase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Motorcycle Manager</string>
+    <string name="bike_list">Your motorcycles :</string>
 </resources>
