feat(): edit check

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bike_list">Vos motos :</string>
+    <string name="validate">Valider</string>
 </resources>
