--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Motorcycle Manager</string>
     <string name="bike_list">Your motorcycles :</string>
+    <string name="validate">Validate</string>
 </resources>
