--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,4 +2,17 @@
 <resources>
     <string name="bike_list">Vos motos :</string>
     <string name="validate">Valider</string>
+    <string name="add_a_dirtbike">Ajouter une motocross</string>
+    <string name="add_hours">Ajouter des heures de roulage</string>
+    <string name="consommables">Consommables</string>
+    <string name="add_consumable">Ajouter consommable</string>
+    <string name="no_consumables">Aucun consommables</string>
+    <string name="consumables_examples">Exemple : vidanges, filtre à huile, pistons, etc.. Un consommable, c\'est simplement quelque chose qui à une durée de vie sur votre moto et dont vous voulez savoir à combien vous en êtes</string>
+    <string name="no_check_points">Aucun points de contrôles</string>
+    <string name="checks_examples">Exemple : contrôler serrage, verifier tensions chaine, etc.. Toutes actions que vous voulez faire avant et/ou après une sortie</string>
+    <string name="checklist">Points de contrôle</string>
+    <string name="add_check">Ajouter check</string>
+    <string name="more_options">Plus d\'options</string>
+    <string name="update">Modifier</string>
+    <string name="delete">Supprimer</string>
 </resources>
