--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,6 +7,7 @@
     <string name="add_a_dirtbike">Ajouter une motocross</string>
     <string name="add_hours">Ajouter des heures de roulage</string>
     <string name="consommables">Consommables</string>
+    <string name="or">OU</string>
     <string name="add_consumable">Ajouter consommable</string>
     <string name="no_consumables">Aucun consommables</string>
     <string name="consumables_examples">Un consommable, c\'est quelque chose qui a une durée de vie sur votre motocross et dont vous souhaitez savoir à combien vous en êtes\nExemple : vidanges, filtre à huile, pistons, etc.. </string>
@@ -18,14 +19,18 @@
     <string name="more_options">Plus d\'options</string>
     <string name="update">Modifier</string>
     <string name="delete">Supprimer</string>
-    <string name="time_in_hour">Temps (en heures)</string>
+    <string name="time_in_hour">Combien de temps avez vous roulé lors de la dernière sortie (en heures)</string>
+    <string name="time_of_the_bike">Heure actuelle de la moto (nous calculons pour vous combien de temps vous avez roulé)</string>
+    <string name="new_time_cannot_be_less_than_current">Vous ne pouvez pas définir moins d\'heure au compteur que votre moto n\'en possède deja</string>
     <string name="reset_checklist">Décocher tous les points de contrôle</string>
     <string name="time_is_mandatory">Le temps est requis</string>
     <string name="time_should_be_above_0">Le temps doit être un nombre positif</string>
+    <string name="lifetime_should_be_above_0">Le temps de vie de votre consommable doit être supérieur à 0 heures</string>
     <string name="add_ride_time">Ajouter des heures de roulage</string>
     <string name="name_consumable">Nom de la conso</string>
     <string name="time_already_spent">Heures déjà faites</string>
     <string name="name_is_mandatory">Le nom est requis</string>
+    <string name="timelife_of_consumable">Quel doit être la durée de vie en heures de ce consommable ?</string>
     <string name="time_should_not_be_negative">Le temps déjà utilisé doit être un nombre non négatif</string>
     <string name="name_checkpoint">Nom du point de controle</string>
     <string name="bike_name">Nom de votre motocross</string>
@@ -36,4 +41,6 @@
     <string name="consumables_number">Nombre de consommables : %1$d</string>
     <string name="checks_number">Nombre de points de contrôles : %1$d</string>
     <string name="times_number">Nombres d\'heures de la moto : %1$s</string>
+    <string name="your_bike_has_X_hours_now">Votre moto a %1$s heures au compteur, vous définissez que votre moto a maintenant %2$s heures sur le compteur d\'heure, nous calculons donc que vous avez roulé %3$s heures</string>
+    <string name="you_rode_X_hours_last_ride">Vous avez roulé %1$s heures lors de votre dernière sortie, nous allons les ajouter aux %2$s heures actuel de votre moto ainsi qu\'à vos consommables</string>
 </resources>
