--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,6 +24,7 @@
     <string name="new_time_cannot_be_less_than_current">Vous ne pouvez pas définir moins d\'heure au compteur que votre moto n\'en possède deja</string>
     <string name="reset_checklist">Décocher tous les points de contrôle</string>
     <string name="time_is_mandatory">Le temps est requis</string>
+    <string name="renew">Renouveller</string>
     <string name="time_should_be_above_0">Le temps doit être un nombre positif</string>
     <string name="lifetime_should_be_above_0">Le temps de vie de votre consommable doit être supérieur à 0 heures</string>
     <string name="add_ride_time">Ajouter des heures de roulage</string>
