design(): add padding to home page

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Motocross manager</string>
+    <string name="app_name">Motocross Manager</string>
     <string name="bike_list">Vos motocross :</string>
     <string name="validate">Valider</string>
     <string name="back">Retour</string>
@@ -8,47 +8,47 @@
     <string name="add_hours">Ajouter des heures de roulage</string>
     <string name="consommables">Consommables</string>
     <string name="or">OU</string>
-    <string name="add_consumable">Ajouter consommable</string>
-    <string name="no_consumables">Aucun consommables</string>
-    <string name="consumables_examples">Un consommable, c\'est quelque chose qui a une durée de vie sur votre motocross et dont vous souhaitez savoir à combien vous en êtes\nExemple : vidanges, filtre à huile, pistons, etc.. </string>
-    <string name="no_check_points">Aucun points de contrôles</string>
-    <string name="checks_examples">Toutes actions que vous voulez faire avant ou après une sortie\nExemple : contrôler serrage, verifier tensions chaine, etc..</string>
-    <string name="add_hours_examples">En rajoutant des heures de roulage, vous rajouterez également des heures à vos consommables</string>
+    <string name="add_consumable">Ajouter un consommable</string>
+    <string name="no_consumables">Aucun consommable</string>
+    <string name="consumables_examples">Un consommable, c’est quelque chose qui a une durée de vie sur votre motocross et dont vous souhaitez suivre l’usure.\nExemple : vidange, filtre à huile, piston, etc.</string>
+    <string name="no_check_points">Aucun point de contrôle</string>
+    <string name="checks_examples">Toutes les actions que vous souhaitez effectuer avant ou après une sortie.\nExemple : contrôler le serrage, vérifier la tension de chaîne, etc.</string>
+    <string name="add_hours_examples">En ajoutant des heures de roulage, vous les ajoutez aussi à vos consommables.</string>
     <string name="checklist">Points de contrôle</string>
-    <string name="add_check">Ajouter check</string>
-    <string name="more_options">Plus d\'options</string>
+    <string name="add_check">Ajouter un point de contrôle</string>
+    <string name="more_options">Plus d’options</string>
     <string name="update">Modifier</string>
     <string name="delete">Supprimer</string>
-    <string name="home_user_statisfaction">Donnez votre avis sur l\'application</string>
-    <string name="time_on_hour_meter">Combien de temps a elle sur son compteur d\'heure ?</string>
-    <string name="time_in_hour">Combien de temps avez vous roulé lors de la dernière sortie (en heures)</string>
-    <string name="time_of_the_bike">Heures actuelle de la moto (nous calculons pour vous combien de temps vous avez roulé)</string>
-    <string name="new_time_cannot_be_less_than_current">Vous ne pouvez pas définir moins d\'heure au compteur que votre moto n\'en possède deja</string>
+    <string name="home_user_statisfaction">Donnez votre avis sur l’application</string>
+    <string name="time_on_hour_meter">Combien d’heures affiche-t-elle sur son compteur horaire ?</string>
+    <string name="time_in_hour">Combien d’heures avez-vous roulé lors de la dernière sortie ?</string>
+    <string name="time_of_the_bike">Heures actuelles de la moto (nous calculons pour vous le temps roulé)</string>
+    <string name="new_time_cannot_be_less_than_current">Vous ne pouvez pas indiquer moins d’heures que celles déjà affichées au compteur.</string>
     <string name="reset_checklist">Décocher tous les points de contrôle</string>
-    <string name="time_is_mandatory">Le temps est requis</string>
-    <string name="renew">Renouveller</string>
-    <string name="time_should_be_above_0">Le temps doit être un nombre positif</string>
-    <string name="lifetime_should_be_above_0">Le temps de vie de votre consommable doit être supérieur à 0 heures</string>
+    <string name="time_is_mandatory">Le temps est requis.</string>
+    <string name="renew">Renouveler</string>
+    <string name="time_should_be_above_0">Le temps doit être un nombre positif.</string>
+    <string name="lifetime_should_be_above_0">La durée de vie du consommable doit être supérieure à 0 heure.</string>
     <string name="add_ride_time">Ajouter des heures de roulage</string>
-    <string name="name_consumable">Nom de la conso</string>
-    <string name="time_already_spent">Heures déjà faites</string>
-    <string name="name_is_mandatory">Le nom est requis</string>
-    <string name="timelife_of_consumable">Quel doit être la durée de vie en heures de ce consommable ?</string>
-    <string name="time_should_not_be_negative">Le temps déjà utilisé doit être un nombre non négatif</string>
-    <string name="name_checkpoint">Nom du point de controle</string>
+    <string name="name_consumable">Nom du consommable</string>
+    <string name="time_already_spent">Heures déjà effectuées</string>
+    <string name="name_is_mandatory">Le nom est requis.</string>
+    <string name="timelife_of_consumable">Quelle doit être la durée de vie en heures de ce consommable ?</string>
+    <string name="time_should_not_be_negative">Le temps déjà utilisé doit être un nombre positif ou 0.</string>
+    <string name="name_checkpoint">Nom du point de contrôle</string>
     <string name="bike_name">Nom de votre motocross</string>
     <string name="add_dirtbike">Ajouter la moto</string>
     <string name="time_remaining">%1$sh restantes</string>
     <string name="time_remining_exceed">%1$sh en trop</string>
     <string name="consommable_hours">%1$.1f heures</string>
     <string name="consumables_number">Nombre de consommables : %1$d</string>
-    <string name="checks_number">Nombre de points de contrôles : %1$d</string>
-    <string name="times_number">Nombres d\'heures de la moto : %1$s</string>
-    <string name="your_bike_has_X_hours_now">Votre moto a %1$s heures au compteur, vous définissez que votre moto a maintenant %2$s heures sur le compteur d\'heure, nous calculons donc que vous avez roulé %3$s heures</string>
-    <string name="you_rode_X_hours_last_ride">Vous avez roulé %1$s heures lors de votre dernière sortie, nous allons les ajouter aux %2$s heures actuel de votre moto ainsi qu\'à vos consommables</string>
+    <string name="checks_number">Nombre de points de contrôle : %1$d</string>
+    <string name="times_number">Heures de la moto : %1$s</string>
+    <string name="your_bike_has_X_hours_now">Votre moto affiche %1$s heures au compteur. Vous indiquez qu’elle en a maintenant %2$s. Nous calculons donc que vous avez roulé %3$s heures.</string>
+    <string name="you_rode_X_hours_last_ride">Vous avez roulé %1$s heures lors de votre dernière sortie. Nous allons les ajouter aux %2$s heures actuelles de votre moto ainsi qu’à vos consommables.</string>
     <string name="home">Accueil</string>
-    <string name="about">A propos</string>
-    <string name="app_explain">Motocrboss Manager est une application <b>100 % gratuite</b> créée par un pilote passioné.</string>
+    <string name="about">À propos</string>
+    <string name="app_explain">Motocross Manager est une application <b>100 % gratuite</b> créée par un pilote passionné.</string>
     <string name="app_explain2">GitHub : <a href="https://github.com/Z3nk/Motorcycle-Manager">https://github.com/Z3nk/Motorcycle-Manager</a></string>
     <string name="app_explain3">Contact développeur : <a href="mailto:dirtbikemanager@gmail.com">dirtbikemanager@gmail.com</a></string>
     <string name="app_explain4">Vous pouvez aussi soutenir mon travail en laissant un <b>avis 5 étoiles</b> sur le Play Store !</string>
