--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,54 +1,55 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Dirtbike Manager</string>
-    <string name="bike_list">Your dirtbikes :</string>
+    <string name="bike_list">Your dirtbikes:</string>
     <string name="back">Back</string>
-    <string name="validate">Validate</string>
+    <string name="validate">Save</string>
     <string name="add_a_dirtbike">Add a dirtbike</string>
-    <string name="add_hours">Add time spent on the dirtbike</string>
+    <string name="add_hours">Add ride time</string>
     <string name="consommables">Consumables</string>
     <string name="or">OR</string>
     <string name="add_consumable">Add consumable</string>
     <string name="no_consumables">No consumables</string>
-    <string name="consumables_examples">A consumable is simply something that has a lifespan on your dirtbike and you want to know how much you\re up to\nExample : oil change, oil filter, pistons, etc. </string>
-    <string name="no_check_points">No check points</string>
+    <string name="consumables_examples">A consumable is anything with a lifespan on your dirtbike that you want to track.\nExamples: oil change, oil filter, piston, etc.</string>
+    <string name="no_check_points">No checkpoints</string>
     <string name="renew">Renew</string>
-    <string name="checks_examples">Any actions you want to do before or after a ride\nExample : check torque, check chain tension, etc.</string>
-    <string name="home_user_statisfaction">Give us your opinion of this app</string>
-    <string name="add_hours_examples">By adding hours spend riding your dirtbike, you will add hours to your consumables too</string>
-    <string name="checklist">Check list</string>
-    <string name="add_check">Add check point</string>
+    <string name="checks_examples">Any tasks you want to do before or after a ride.\nExamples: check torque, check chain tension, etc.</string>
+    <string name="home_user_statisfaction">Rate this app</string>
+    <string name="add_hours_examples">Adding ride time will also update your consumables.</string>
+    <string name="checklist">Checklist</string>
+    <string name="add_check">Add checkpoint</string>
     <string name="more_options">More options</string>
-    <string name="update">Update</string>
+    <string name="update">Edit</string>
     <string name="delete">Delete</string>
-    <string name="time_on_hour_meter">How much time is on the hour meter?</string>
-    <string name="time_in_hour">How long was your last ride (in hours)</string>
-    <string name="timelife_of_consumable">What should be the lifespan in hours of this consumable?</string>
-    <string name="time_of_the_bike">Current time of the bike(we calculate for you how long did you ride)</string>
-    <string name="reset_checklist">Unchecked every checks points</string>
-    <string name="time_is_mandatory">Time is mandatory</string>
-    <string name="lifetime_should_be_above_0">Lifespan of your consumable should be above 0 hours</string>
-    <string name="time_should_be_above_0">Time should be above 0</string>
-    <string name="new_time_cannot_be_less_than_current">You cannot set fewer hours on the hour meter than your bike already has.</string>
-    <string name="add_ride_time">Add ride time on the bike</string>
-    <string name="name_consumable">Name of the consumable</string>
-    <string name="time_already_spent">Hours already spent</string>
-    <string name="name_is_mandatory">Name is mandatory</string>
-    <string name="time_should_not_be_negative">Time already spent should not be negative</string>
+    <string name="time_on_hour_meter">How many hours are on the hour meter?</string>
+    <string name="time_in_hour">How many hours was your last ride?</string>
+    <string name="timelife_of_consumable">What is the expected lifespan of this consumable (in hours)?</string>
+    <string name="time_of_the_bike">Current bike hours (we calculate ride time for you)</string>
+    <string name="reset_checklist">Uncheck all items</string>
+    <string name="time_is_mandatory">Ride time is required.</string>
+    <string name="lifetime_should_be_above_0">Consumable lifespan must be greater than 0 hours.</string>
+    <string name="time_should_be_above_0">Ride time must be greater than 0.</string>
+    <string name="new_time_cannot_be_less_than_current">You cannot set fewer hours than currently on the meter.</string>
+    <string name="add_ride_time">Add ride time</string>
+    <string name="name_consumable">Consumable name</string>
+    <string name="time_already_spent">Hours already used</string>
+    <string name="name_is_mandatory">Name is required.</string>
+    <string name="time_should_not_be_negative">Hours used cannot be negative.</string>
     <string name="name_checkpoint">Checkpoint name</string>
-    <string name="bike_name">Name of the dirtbike</string>
+    <string name="bike_name">Dirtbike name</string>
     <string name="add_dirtbike">Add dirtbike</string>
     <string name="time_remaining">%1$.1f hours remaining</string>
-    <string name="time_remining_exceed">%1$.1f hours over</string>
+    <string name="time_remining_exceed">%1$.1f hours overdue</string>
     <string name="consommable_hours">%1$.1f hours</string>
-    <string name="consumables_number">Number of consumables : %1$d</string>
-    <string name="checks_number">Number of checkpoints : %1$d</string>
-    <string name="times_number">Dirtbike\'s number of hours : %1$s</string>
-    <string name="your_bike_has_X_hours_now">Your bike has %1$s hours, you define than your bike has now %2$s hours on the hour meter, so we calculate that you rode %3$s hours</string>
-    <string name="you_rode_X_hours_last_ride">You rode %1$s hours on your last ride, we will add them to your bike\'s current %2$s hours as well as your consumables</string>
+    <string name="consumables_number">Consumables: %1$d</string>
+    <string name="checks_number">Checkpoints: %1$d</string>
+    <string name="times_number">Bike hours: %1$s</string>
+    <string name="your_bike_has_X_hours_now">Your bike has %1$s hours. You’re setting it to %2$s hours, so we calculate you rode %3$s hours.</string>
+    <string name="you_rode_X_hours_last_ride">You rode %1$s hours on your last ride. We’ll add them to your bike’s current %2$s hours and update your consumables.</string>
     <string name="home">Home</string>
     <string name="about">About</string>
     <string name="app_explain">Dirtbike Manager is a <b>100% free</b> app built by a passionate rider.</string>
     <string name="app_explain2">GitHub: <a href="https://github.com/Z3nk/Motorcycle-Manager">https://github.com/Z3nk/Motorcycle-Manager</a></string>
-    <string name="app_explain3">Developer email: <a href="mailto:dirtbikemanager@gmail.com">dirtbikemanager@gmail.com</a></string>
-    <string name="app_explain4">You can also support my work by leaving a <b>5-star review</b> on the Play Store!</string>
+    <string name="app_explain3">Contact: <a href="mailto:dirtbikemanager@gmail.com">dirtbikemanager@gmail.com</a></string>
+    <string name="app_explain4">Support the project by leaving a <b>5-star review</b> on the Play Store!</string>
 </resources>
